--- CHANGELOG ---
--- PyFMI-2.10.3 ---
    * Added method to retrieve the unbounded attribute for real variables in FMI2: get_variable_unbounded.
    * Note: With Assimulo >= 3.4.1 CVode adds supports relative tolerance vectors, see Assimulo README for details.
    * Added partial support for rtol vectors in simulate(): Values need to be equal except for zeros & requires support from used solver.
    * For unbounded states, the simulate method attempts to create a vector of relative tolerances and entries that correspond to unbounded states are set to zero. (FMI2 ME only)

--- PyFMI-2.10.2 ---
    * Corrected version number.

--- PyFMI-2.10.1 ---
    * Changed such that absolute tolerances calculated with state nominals retrieved before initialization will be recalculated with state nominals from after initialization when possible.
    * Added auto correction of retrieved state nominals with illegal values.

--- PyFMI-2.10.0 ---
    * Added shortcut such that get_(real|integer|boolean|string)([]) calls no longer trigger a call to the FMU.
    * Removed the following deprecated functions:
      * pyfmi.fmi.FMUModelCS1, FMUModelME1, FMUModelCS2, FMUModelME2, pyfmi.fmi.FMUModelME1Extended: get_log_file_name: use get_log_filename
      * pyfmi.fmi.FMUModelCS1, FMUModelME1, FMUModelCS2, FMUModelME2, pyfmi.fmi.FMUModelME1Extended: set_fmil_log_level: use set_log_level
    * Removed the following deprecated arguments:
      * pyfmi.fmi.FMUModelCS1, FMUModelME1, FMUModelCS2, FMUModelME2, load_fmu, pyfmi.fmi.FMUModelME1Extended: 'path': use 'fmu' instead
      * pyfmi.fmi.FMUModelCS1, FMUModelME1, FMUModelCS2, FMUModelME2, load_fmu, pyfmi.fmi.FMUModelME1Extended: 'enable_logging': use 'log_level' instead
      * pyfmi.fmi.FMUModelCS1, FMUModelME1Extended.initialize: 'tStart': use 'start_time' instead
      * pyfmi.fmi.FMUModelCS1, FMUModelME1Extended.initialize: 'tStop': use 'stop_time' instead